js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromElvisWithCrossModuleInliner/lib1/l1b.2.kt
inline fun bar() = 4
